--- a/Pages/veille technologique.html
+++ b/Pages/veille technologique.html
@@ -218,141 +218,262 @@
     </div>
 </div>
 
-<!-- Résultats Concrets -->
+<!-- Ma Routine de Veille -->
 <div id="resultats" class="section">
     <div class="boxed">
-        <h2>Exemples de Résultats de ma Veille</h2>
+        <h2>Ma Routine de Veille au Quotidien</h2>
         <p class="section-intro">
-            Voici quelques exemples concrets d'informations et de découvertes issues de ma veille technologique.
+            Voici comment je reste informé jour après jour des dernières innovations en IA et développement.
+            Une routine simple mais efficace que j'ai construite au fil du temps.
         </p>
 
-        <!-- Section Captures d'écran -->
-        <div style="margin: 50px 0;">
-            <h3 style="text-align: center; font-size: 2rem; margin-bottom: 30px;">
-                📬 Exemples de Google Alerts
-            </h3>
-            <p style="text-align: center; max-width: 700px; margin: 0 auto 30px; font-size: 1.1rem; color: #666;">
-                Google Alerts m'envoie quotidiennement des articles sur mes mots-clés. Voici un aperçu du flux
-                d'informations que je reçois et que je dois ensuite trier pour ne garder que les plus pertinents.
+        <!-- Étape 1 : Google Alerts -->
+        <div class="routine-step">
+            <div class="step-number-badge">1</div>
+            <h3 class="routine-title">📬 Mes Alertes Google : Le Flux Quotidien</h3>
+            <p class="routine-description">
+                Chaque matin, je reçois par email une sélection d'articles sur mes mots-clés : "IA développement",
+                "GitHub Copilot", "automatisation code", etc. C'est mon premier contact avec l'actualité du jour.
             </p>
 
-            <div style="background: #f9f9f9; padding: 40px; border-radius: 15px; text-align: center;">
+            <div class="screenshot-container">
                 <img src="../img/Veille/Capture d'écran alerte n°1.png"
                      alt="Exemple d'alertes Google"
-                     style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); cursor: pointer;"
+                     class="screenshot-img"
                      onclick="window.open(this.src, '_blank')">
-                <p style="margin-top: 20px; font-style: italic; color: #666;">
-                    Cliquez sur l'image pour l'agrandir
+                <p class="screenshot-caption">
+                    <em>Aperçu de mes alertes quotidiennes - Je dois trier rapidement pour identifier les articles vraiment pertinents</em>
                 </p>
+            </div>
+
+            <div class="insight-box">
+                <strong>💡 Mon astuce :</strong> Je consacre 10-15 minutes chaque matin à parcourir ces alertes
+                pendant mon café. Je lis les titres et ouvre seulement ceux qui m'intéressent vraiment.
             </div>
         </div>
 
-        <!-- Section Organisation -->
-        <div style="margin: 50px 0;">
-            <h3 style="text-align: center; font-size: 2rem; margin-bottom: 30px;">
-                📌 Mon Organisation avec un Dashboard
-            </h3>
-            <p style="text-align: center; max-width: 700px; margin: 0 auto 30px; font-size: 1.1rem; color: #666;">
-                Tous les articles que je juge pertinents sont sauvegardés dans mon Dashboard sur feeldy,
-                ce qui me permet de les retrouver facilement et de les consulter ultérieurement.
+        <!-- Étape 2 : Feedly -->
+        <div class="routine-step">
+            <div class="step-number-badge">2</div>
+            <h3 class="routine-title">📰 Feedly : Mon Hub d'Information</h3>
+            <p class="routine-description">
+                Feedly centralise tous mes flux RSS préférés : blogs de développeurs, sites tech,
+                annonces officielles d'OpenAI et GitHub. C'est là que je vais chercher du contenu plus approfondi.
             </p>
 
-            <div style="background: #f9f9f9; padding: 40px; border-radius: 15px; text-align: center;">
-                <img src="../img/Veille/Pindboards.png"
-                     alt="Mon dashboard de veille"
-                     style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); cursor: pointer;"
+            <div class="screenshot-container">
+                <img src="../img/Veille/feedly-flux.png"
+                     alt="Mes flux RSS sur Feedly"
+                     class="screenshot-img"
                      onclick="window.open(this.src, '_blank')">
-                <p style="margin-top: 20px; font-style: italic; color: #666;">
-                    Cliquez sur l'image pour l'agrandir
+                <p class="screenshot-caption">
+                    <em>Aperçu de mes flux RSS organisés par catégorie - Tous mes contenus favoris au même endroit</em>
                 </p>
+            </div>
+
+            <div class="benefits-highlight">
+                <div class="benefit-item">
+                    <span class="benefit-icon">✓</span>
+                    <span>Tout au même endroit - fini les 20 onglets ouverts</span>
+                </div>
+                <div class="benefit-item">
+                    <span class="benefit-icon">✓</span>
+                    <span>Articles organisés par thématique (IA, outils dev, tutos)</span>
+                </div>
+                <div class="benefit-item">
+                    <span class="benefit-icon">✓</span>
+                    <span>Je peux sauvegarder pour lire plus tard</span>
+                </div>
             </div>
         </div>
 
-        <!-- Statistiques -->
-        <div style="margin: 50px 0;">
-            <h3 style="text-align: center; font-size: 2rem; margin-bottom: 40px;">
-                📊 Quelques Chiffres
-            </h3>
-            <div class="stats-grid">
-                <div class="stat-card">
-                    <div class="stat-number">~20</div>
-                    <div class="stat-label">Sources suivies</div>
+        <!-- Étape 3 : Dashboard Feedly -->
+        <div class="routine-step">
+            <div class="step-number-badge">3</div>
+            <h3 class="routine-title">📌 Mon Tableau de Bord : Sauvegarder et Organiser</h3>
+            <p class="routine-description">
+                Les articles que je trouve vraiment intéressants, je les épingle dans mon dashboard Feedly.
+                C'est ma bibliothèque personnelle que je peux consulter à tout moment.
+            </p>
+
+            <div class="screenshot-container">
+                <img src="../img/Veille/Pindboards.png"
+                     alt="Mon dashboard de veille"
+                     class="screenshot-img"
+                     onclick="window.open(this.src, '_blank')">
+                <p class="screenshot-caption">
+                    <em>Mon espace de sauvegarde - Ici je retrouve tous les articles importants classés par catégorie</em>
+                </p>
+            </div>
+
+            <div class="insight-box">
+                <strong>💡 Pourquoi c'est utile :</strong> Quand je dois travailler sur un projet ou apprendre
+                une nouvelle techno, je retourne dans mes sauvegardes pour retrouver les meilleurs articles et tutoriels.
+            </div>
+        </div>
+
+        <!-- Étape 4 : Discord -->
+        <div class="routine-step">
+            <div class="step-number-badge">4</div>
+            <h3 class="routine-title">💬 Discord : L'Échange avec la Communauté</h3>
+            <p class="routine-description">
+                Je suis actif sur plusieurs serveurs Discord dédiés à l'IA et au développement.
+                C'est là que je découvre les infos en temps réel, pose mes questions et partage mes trouvailles.
+            </p>
+
+            <div class="discord-servers">
+                <h4 class="servers-subtitle">Mes serveurs Discord :</h4>
+                <div class="server-list">
+                    <div class="server-item">
+                        <span class="server-icon">💻</span>
+                        <span class="server-name">Dev IA France</span>
+                    </div>
+                    <div class="server-item">
+                        <span class="server-icon">🤖</span>
+                        <span class="server-name">OpenAI Developers</span>
+                    </div>
+                    <div class="server-item">
+                        <span class="server-icon">⚡</span>
+                        <span class="server-name">GitHub Community</span>
+                    </div>
                 </div>
-                <div class="stat-card">
-                    <div class="stat-number">~50</div>
-                    <div class="stat-label">Articles/semaine</div>
+            </div>
+
+            <div class="discord-benefits">
+                <div class="discord-point">
+                    <span class="material-symbols-outlined">speed</span>
+                    <h4>Info en temps réel</h4>
+                    <p>Nouveaux outils et updates annoncés instantanément</p>
                 </div>
-                <div class="stat-card">
-                    <div class="stat-number">3</div>
-                    <div class="stat-label">Serveurs Discord</div>
+                <div class="discord-point">
+                    <span class="material-symbols-outlined">groups</span>
+                    <h4>Entraide</h4>
+                    <p>Je peux poser des questions et obtenir des réponses de pros</p>
                 </div>
-                <div class="stat-card">
-                    <div class="stat-number">Daily</div>
-                    <div class="stat-label">Fréquence de veille</div>
+                <div class="discord-point">
+                    <span class="material-symbols-outlined">tips_and_updates</span>
+                    <h4>Retours d'expérience</h4>
+                    <p>Découvrir comment les autres utilisent ces outils</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Synthèse personnelle -->
+        <div class="personal-takeaway">
+            <h3>🎯 Ce que cette veille m'apporte concrètement</h3>
+            <div class="takeaway-grid">
+                <div class="takeaway-card">
+                    <h4>📚 J'apprends en continu</h4>
+                    <p>Chaque jour, je découvre de nouveaux outils, techniques et bonnes pratiques que j'applique dans mes projets.</p>
+                </div>
+                <div class="takeaway-card">
+                    <h4>⚡ Je gagne en productivité</h4>
+                    <p>En testant les nouveaux outils IA, j'ai trouvé des moyens de coder plus vite et mieux.</p>
+                </div>
+                <div class="takeaway-card">
+                    <h4>🚀 Je reste compétitif</h4>
+                    <p>Dans un domaine qui évolue aussi vite, cette veille me permet de ne pas être dépassé.</p>
+                </div>
+                <div class="takeaway-card">
+                    <h4>🤝 Je développe mon réseau</h4>
+                    <p>Les échanges sur Discord m'ont permis de rencontrer des développeurs passionnés et d'apprendre d'eux.</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<!-- Analyse -->
+<!-- Statistiques en chiffres -->
 <div class="section dark">
+    <div class="boxed">
+        <h2>📊 Ma Veille en Chiffres</h2>
+        <p class="section-intro">
+            Quelques données pour visualiser l'ampleur de ma veille quotidienne
+        </p>
+
+        <div class="stats-grid">
+            <div class="stat-card">
+                <div class="stat-number">~20</div>
+                <div class="stat-label">Sources RSS suivies</div>
+                <div class="stat-detail">Blogs, sites officiels, médias tech</div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-number">~50</div>
+                <div class="stat-label">Articles reçus/semaine</div>
+                <div class="stat-detail">Via Google Alerts et Feedly</div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-number">3</div>
+                <div class="stat-label">Serveurs Discord</div>
+                <div class="stat-detail">Communautés IA et développement</div>
+            </div>
+            <div class="stat-card">
+                <div class="stat-number">15-20min</div>
+                <div class="stat-label">Temps quotidien</div>
+                <div class="stat-detail">Le matin pour trier l'info</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Analyse -->
+<div class="section">
     <div class="boxed">
         <h2>Analyse de ma Veille</h2>
         <p class="section-intro">
             Retour d'expérience sur les forces et les axes d'amélioration de mon système de veille.
         </p>
 
-        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-top: 40px;">
-            <div>
-                <h4 style="font-size: 1.5rem; color: #667eea; margin-bottom: 20px; display: flex; align-items: center; gap: 10px;">
+        <div class="analysis-grid">
+            <div class="analysis-column">
+                <h4 class="analysis-title positive">
                     <span class="material-symbols-outlined">thumb_up</span>
                     Points Forts
                 </h4>
-                <ul style="list-style: none; padding: 0;">
-                    <li style="padding: 12px 0; padding-left: 30px; position: relative; font-size: 1.1rem; color: #fff;">
-                        <span style="position: absolute; left: 0; color: #667eea; font-weight: bold;">✓</span>
+                <ul class="analysis-list">
+                    <li class="positive-item">
+                        <span class="item-marker">✓</span>
                         Flux d'informations de qualité et pertinentes
                     </li>
-                    <li style="padding: 12px 0; padding-left: 30px; position: relative; font-size: 1.1rem; color: #fff;">
-                        <span style="position: absolute; left: 0; color: #667eea; font-weight: bold;">✓</span>
+                    <li class="positive-item">
+                        <span class="item-marker">✓</span>
                         Sources diversifiées et complémentaires
                     </li>
-                    <li style="padding: 12px 0; padding-left: 30px; position: relative; font-size: 1.1rem; color: #fff;">
-                        <span style="position: absolute; left: 0; color: #667eea; font-weight: bold;">✓</span>
+                    <li class="positive-item">
+                        <span class="item-marker">✓</span>
                         Accès rapide et centralisé à l'information
                     </li>
-                    <li style="padding: 12px 0; padding-left: 30px; position: relative; font-size: 1.1rem; color: #fff;">
-                        <span style="position: absolute; left: 0; color: #667eea; font-weight: bold;">✓</span>
+                    <li class="positive-item">
+                        <span class="item-marker">✓</span>
                         Échanges enrichissants sur Discord
                     </li>
-                    <li style="padding: 12px 0; padding-left: 30px; position: relative; font-size: 1.1rem; color: #fff;">
-                        <span style="position: absolute; left: 0; color: #667eea; font-weight: bold;">✓</span>
+                    <li class="positive-item">
+                        <span class="item-marker">✓</span>
                         Organisation efficace avec Pinboard
                     </li>
                 </ul>
             </div>
 
-            <div>
-                <h4 style="font-size: 1.5rem; color: #f39c12; margin-bottom: 20px; display: flex; align-items: center; gap: 10px;">
+            <div class="analysis-column">
+                <h4 class="analysis-title improvement">
                     <span class="material-symbols-outlined">priority_high</span>
                     Points d'Amélioration
                 </h4>
-                <ul style="list-style: none; padding: 0;">
-                    <li style="padding: 12px 0; padding-left: 30px; position: relative; font-size: 1.1rem; color: #fff;">
-                        <span style="position: absolute; left: 0; color: #f39c12; font-weight: bold;">!</span>
+                <ul class="analysis-list">
+                    <li class="improvement-item">
+                        <span class="item-marker">!</span>
                         Volume important nécessitant un tri régulier
                     </li>
-                    <li style="padding: 12px 0; padding-left: 30px; position: relative; font-size: 1.1rem; color: #fff;">
-                        <span style="position: absolute; left: 0; color: #f39c12; font-weight: bold;">!</span>
+                    <li class="improvement-item">
+                        <span class="item-marker">!</span>
                         Doublons entre différentes sources
                     </li>
-                    <li style="padding: 12px 0; padding-left: 30px; position: relative; font-size: 1.1rem; color: #fff;">
-                        <span style="position: absolute; left: 0; color: #f39c12; font-weight: bold;">!</span>
+                    <li class="improvement-item">
+                        <span class="item-marker">!</span>
                         Temps de lecture parfois limité
                     </li>
-                    <li style="padding: 12px 0; padding-left: 30px; position: relative; font-size: 1.1rem; color: #fff;">
-                        <span style="position: absolute; left: 0; color: #f39c12; font-weight: bold;">!</span>
+                    <li class="improvement-item">
+                        <span class="item-marker">!</span>
                         Besoin d'affiner les mots-clés Google Alerts
                     </li>
                 </ul>
