--- a/Pages/Tableau-de-synthèse.html
+++ b/Pages/Tableau-de-synthèse.html
@@ -50,7 +50,7 @@
         <div class="tableau-container">
             <div class="tableau-card">
                 <div class="tableau-image-container">
-                    <img src="../img/Tableau-synthese/Tableau-de-synthèse.jpg"
+                    <img src="../img/Tableau-synthese/Tableau-de-synthèse-.jpg"
                          alt="Tableau de synthèse"
                          class="tableau-image"
                          onclick="window.open(this.src, '_blank')">
@@ -78,7 +78,7 @@
                     </div>
 
                     <div class="download-section">
-                        <a href="../A%20garder/Tableau-de-synthèse.pdf"
+                        <a href="../img/Tableau-synthese/Tableau%20de%20synthèse%20des%20réalisations%20professionnelles%20%20-%20Tableau%20de%20synthèse%20Épreuve%20E4.pdf"
                            class="download-button"
                            target="_blank"
                           ><!-- download="Tableau-de-synthèse.pdf"-->
