--- a/Pages/veille technologique.html
+++ b/Pages/veille technologique.html
@@ -324,18 +324,42 @@
             <div class="discord-servers">
                 <h4 class="servers-subtitle">Mes serveurs Discord :</h4>
                 <div class="server-list">
-                    <div class="server-item">
-                        <span class="server-icon">💻</span>
-                        <span class="server-name">Dev IA France</span>
-                    </div>
-                    <div class="server-item">
-                        <span class="server-icon">🤖</span>
-                        <span class="server-name">OpenAI Developers</span>
-                    </div>
-                    <div class="server-item">
-                        <span class="server-icon">⚡</span>
-                        <span class="server-name">GitHub Community</span>
-                    </div>
+                    <a href="Anthropic.com/discord" target="_blank" class="server-link">
+                        <div class="server-item">
+                            <span class="server-icon">⚡</span>
+                            <span class="server-name">Claude Developer</span>
+                        </div>
+                    </a>
+                    <a href="https://discord.gg/mistralai" target="_blank" class="server-link">
+                        <div class="server-item">
+                            <span class="server-icon">🌟</span>
+                            <span class="server-name">Mistral AI</span>
+                        </div>
+                    </a>
+                    <a href="https://discord.gg/openai" target="_blank" class="server-link">
+                        <div class="server-item">
+                            <span class="server-icon">🤖</span>
+                            <span class="server-name">OpenAI</span>
+                        </div>
+                    </a>
+                    <a href="https://discord.gg/github" target="_blank" class="server-link">
+                        <div class="server-item">
+                            <span class="server-icon">💻</span>
+                            <span class="server-name">GitHub Community</span>
+                        </div>
+                    </a>
+                    <a href="https://discord.gg/lmstudio" target="_blank" class="server-link">
+                        <div class="server-item">
+                            <span class="server-icon">🎯</span>
+                            <span class="server-name">LM Studio</span>
+                        </div>
+                    </a>
+                    <a href="https://discord.gg/ollama" target="_blank" class="server-link">
+                        <div class="server-item">
+                            <span class="server-icon">🦙</span>
+                            <span class="server-name">Ollama</span>
+                        </div>
+                    </a>
                 </div>
             </div>
 
