--- a/Pages/veille technologique.html
+++ b/Pages/veille technologique.html
@@ -407,6 +407,294 @@
     </div>
 </div>
 
+<!-- Dashboard RSS -->
+<div id="dashboard" class="section">
+    <div class="boxed">
+        <h2>📊 Mon Dashboard de Veille en Direct</h2>
+        <p class="section-intro">
+            Découvrez en temps réel les derniers articles de mes sources favorites, organisés par thématique.
+            Ces flux sont automatiquement mis à jour depuis mes abonnements RSS.
+        </p>
+
+        <div class="dashboard-controls">
+            <button class="category-filter active" data-category="all">Tous les flux</button>
+            <button class="category-filter" data-category="dev">IA pour Développeurs</button>
+            <button class="category-filter" data-category="news">Actualités IA</button>
+        </div>
+
+        <!-- Loading State -->
+        <div id="loading-state" class="loading-container">
+            <div class="loader"></div>
+            <p>Chargement des derniers articles...</p>
+        </div>
+
+        <!-- Feed Categories -->
+        <div id="feeds-container" style="display: none;">
+            <!-- IA pour Développeurs -->
+            <div class="feed-category" data-category="dev">
+                <div class="category-header-dash">
+                    <span class="material-symbols-outlined">code</span>
+                    <h3>IA pour les Développeurs</h3>
+                </div>
+
+                <div class="sources-grid">
+                    <div class="source-box" data-feed-url="https://github.blog/feed/">
+                        <div class="source-header">
+                            <div class="source-info">
+                                <h4>GitHub Blog</h4>
+                                <a href="https://github.blog" target="_blank" class="source-link">github.blog</a>
+                            </div>
+                            <span class="source-icon">💻</span>
+                        </div>
+                        <div class="articles-list" id="feed-github"></div>
+                    </div>
+
+                    <div class="source-box" data-feed-url="https://www.infoq.com/feed/">
+                        <div class="source-header">
+                            <div class="source-info">
+                                <h4>InfoQ</h4>
+                                <a href="https://www.infoq.com" target="_blank" class="source-link">infoq.com</a>
+                            </div>
+                            <span class="source-icon">📰</span>
+                        </div>
+                        <div class="articles-list" id="feed-infoq"></div>
+                    </div>
+
+                    <div class="source-box" data-feed-url="https://stackoverflow.blog/feed/">
+                        <div class="source-header">
+                            <div class="source-info">
+                                <h4>Stack Overflow Blog</h4>
+                                <a href="https://stackoverflow.blog" target="_blank" class="source-link">stackoverflow.blog</a>
+                            </div>
+                            <span class="source-icon">📚</span>
+                        </div>
+                        <div class="articles-list" id="feed-stackoverflow"></div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Actualités IA -->
+            <div class="feed-category" data-category="news">
+                <div class="category-header-dash">
+                    <span class="material-symbols-outlined">newspaper</span>
+                    <h3>Actualités IA</h3>
+                </div>
+
+                <div class="sources-grid">
+                    <div class="source-box">
+                        <div class="source-header">
+                            <div class="source-info">
+                                <h4>OpenAI News</h4>
+                                <a href="https://openai.com/blog" target="_blank" class="source-link">openai.com/blog</a>
+                            </div>
+                            <span class="source-icon">🤖</span>
+                        </div>
+                        <div class="articles-list">
+                            <p class="feed-note">📌 Visitez directement leur blog pour les dernières actualités</p>
+                        </div>
+                    </div>
+
+                    <div class="source-box">
+                        <div class="source-header">
+                            <div class="source-info">
+                                <h4>Google AI Blog</h4>
+                                <a href="https://ai.googleblog.com" target="_blank" class="source-link">ai.googleblog.com</a>
+                            </div>
+                            <span class="source-icon">🔬</span>
+                        </div>
+                        <div class="articles-list">
+                            <p class="feed-note">📌 Consultez leur blog pour les recherches récentes</p>
+                        </div>
+                    </div>
+
+                    <div class="source-box">
+                        <div class="source-header">
+                            <div class="source-info">
+                                <h4>Anthropic</h4>
+                                <a href="https://www.anthropic.com" target="_blank" class="source-link">anthropic.com</a>
+                            </div>
+                            <span class="source-icon">⚡</span>
+                        </div>
+                        <div class="articles-list">
+                            <p class="feed-note">📌 Découvrez leurs dernières annonces sur leur site</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="dashboard-footer">
+            <p>💡 <strong>Astuce :</strong> Ces flux sont mis à jour automatiquement. Cliquez sur un article pour le lire en entier !</p>
+        </div>
+    </div>
+</div>
+
+<script>
+    // RSS Feed Loader avec gestion d'erreurs améliorée
+    async function loadRSSFeed(url, containerId, limit = 3) {
+        const container = document.getElementById(containerId);
+        if (!container) return;
+
+        try {
+            // Utiliser RSS2JSON comme proxy CORS
+            const rss2jsonUrl = `https://api.rss2json.com/v1/api.json?rss_url=${encodeURIComponent(url)}`;
+            const response = await fetch(rss2jsonUrl);
+            const data = await response.json();
+
+            if (data.status === 'ok' && data.items && data.items.length > 0) {
+                const articles = data.items.slice(0, limit);
+                container.innerHTML = articles.map(item => {
+                    const pubDate = new Date(item.pubDate);
+                    const timeAgo = getTimeAgo(pubDate);
+
+                    return `
+                    <a href="${item.link}" target="_blank" class="article-item">
+                        <div class="article-title">${truncate(item.title, 80)}</div>
+                        <div class="article-meta">
+                            <span class="article-date">${timeAgo}</span>
+                        </div>
+                    </a>
+                `;
+                }).join('');
+            } else {
+                container.innerHTML = '<p class="feed-error">⚠️ Impossible de charger ce flux pour le moment</p>';
+            }
+        } catch (error) {
+            console.error(`Erreur lors du chargement du flux ${url}:`, error);
+            container.innerHTML = '<p class="feed-error">⚠️ Erreur de chargement du flux</p>';
+        }
+    }
+
+    function truncate(str, length) {
+        return str.length > length ? str.substring(0, length) + '...' : str;
+    }
+
+    function getTimeAgo(date) {
+        const seconds = Math.floor((new Date() - date) / 1000);
+        const intervals = {
+            'an': 31536000,
+            'mois': 2592000,
+            'jour': 86400,
+            'heure': 3600,
+            'minute': 60
+        };
+
+        for (let [name, secondsInInterval] of Object.entries(intervals)) {
+            const interval = Math.floor(seconds / secondsInInterval);
+            if (interval >= 1) {
+                return `Il y a ${interval} ${name}${interval > 1 && name !== 'mois' ? 's' : ''}`;
+            }
+        }
+        return 'À l\'instant';
+    }
+
+    // Charger tous les flux au chargement de la page
+    document.addEventListener('DOMContentLoaded', async () => {
+        const loadingState = document.getElementById('loading-state');
+        const feedsContainer = document.getElementById('feeds-container');
+
+        // Charger les flux
+        await Promise.all([
+            loadRSSFeed('https://github.blog/feed/', 'feed-github'),
+            loadRSSFeed('https://www.infoq.com/feed/', 'feed-infoq'),
+            loadRSSFeed('https://stackoverflow.blog/feed/', 'feed-stackoverflow')
+        ]);
+
+        // Cacher le loader et afficher les feeds
+        setTimeout(() => {
+            loadingState.style.display = 'none';
+            feedsContainer.style.display = 'block';
+        }, 500);
+
+        // Filtres de catégories
+        const filterButtons = document.querySelectorAll('.category-filter');
+        const categories = document.querySelectorAll('.feed-category');
+
+        filterButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                const category = button.dataset.category;
+
+                filterButtons.forEach(btn => btn.classList.remove('active'));
+                button.classList.add('active');
+
+                categories.forEach(cat => {
+                    if (category === 'all' || cat.dataset.category === category) {
+                        cat.style.display = 'block';
+                    } else {
+                        cat.style.display = 'none';
+                    }
+                });
+            });
+        });
+    });
+</script>
+
+<!-- Analyse -->
+<div class="section">
+    <div class="boxed">
+        <h2>Analyse de ma Veille</h2>
+        <p class="section-intro">
+            Retour d'expérience sur les forces et les axes d'amélioration de mon système de veille.
+        </p>
+
+        <div class="analysis-grid">
+            <div class="analysis-column">
+                <h4 class="analysis-title positive">
+                    <span class="material-symbols-outlined">thumb_up</span>
+                    Points Forts
+                </h4>
+                <ul class="analysis-list">
+                    <li class="positive-item">
+                        <span class="item-marker">✓</span>
+                        Flux d'informations de qualité et pertinentes
+                    </li>
+                    <li class="positive-item">
+                        <span class="item-marker">✓</span>
+                        Sources diversifiées et complémentaires
+                    </li>
+                    <li class="positive-item">
+                        <span class="item-marker">✓</span>
+                        Accès rapide et centralisé à l'information
+                    </li>
+                    <li class="positive-item">
+                        <span class="item-marker">✓</span>
+                        Échanges enrichissants sur Discord
+                    </li>
+                    <li class="positive-item">
+                        <span class="item-marker">✓</span>
+                        Organisation efficace avec Pinboard
+                    </li>
+                </ul>
+            </div>
+
+            <div class="analysis-column">
+                <h4 class="analysis-title improvement">
+                    <span class="material-symbols-outlined">priority_high</span>
+                    Points d'Amélioration
+                </h4>
+                <ul class="analysis-list">
+                    <li class="improvement-item">
+                        <span class="item-marker">!</span>
+                        Volume important nécessitant un tri régulier
+                    </li>
+                    <li class="improvement-item">
+                        <span class="item-marker">!</span>
+                        Doublons entre différentes sources
+                    </li>
+                    <li class="improvement-item">
+                        <span class="item-marker">!</span>
+                        Temps de lecture parfois limité
+                    </li>
+                    <li class="improvement-item">
+                        <span class="item-marker">!</span>
+                        Besoin d'affiner les mots-clés Google Alerts
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Statistiques en chiffres -->
 <div class="section dark">
     <div class="boxed">
